gccida/g2/gen_reload
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7813:46: error: must use 'enum' tag to refer to type 'reload_type'
rtx  gen_reload( rtx out, rtx in, int opnum, reload_type type) 
                                             ^
                                             enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7816:4: error: expected ';' after expression
rtx last_insn; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7816:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7823:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7823:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7828:4: error: expected ';' after expression
rtx v20; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7828:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7819:18: note: 'v10' declared here
 struct rtx_def *v10; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7831:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7831:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7837:4: error: expected ';' after expression
rtx v29; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7837:5: error: use of undeclared identifier 'v29'
rtx v29; // r9 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7839:4: error: expected ';' after expression
rtx v31; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7839:5: error: use of undeclared identifier 'v31'
rtx v31; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7845:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7845:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7846:4: error: expected ';' after expression
rtx secondary_mem; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7846:5: error: use of undeclared identifier 'secondary_mem'; did you mean 'get_secondary_mem'?
rtx secondary_mem; // rax 
    ^~~~~~~~~~~~~
    get_secondary_mem
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload.h:260:12: note: 'get_secondary_mem' declared here
extern rtx get_secondary_mem PARAMS ((rtx, enum machine_mode,
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7848:4: error: expected ';' after expression
rtx v40; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/reload1.c:7848:5: error: use of undeclared identifier 'v40'
rtx v40; // r14 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_reload/src/obj/reload1.o] Error 1
